# Tugas_RTC_Rust

./: README.md
Qt_SVM_KNN/: Cargo.toml
Qt_SVM_KNN/qt/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt_SVM_KNN/src/: lib.rs  main.rs
Qt_SVM_KNN/src/models/: knn.rs  mod.rs  svm.rs
Qt_SVM_KNN/src/visualization/: plotter.rs
Taylorsendiri/: Cargo.toml
Taylorsendiri/src/: main.rs
industry_maintenance_ml/: Backup Main.txt  Cargo.toml
industry_maintenance_ml/csv/: industry_maintenance.csv
industry_maintenance_ml/src/: main.rs
industry_maintenance_ml/src/data/: loader.rs
industry_maintenance_ml/src/models/: knn.rs
industry_maintenance_ml/src/visualization/: plotter.rs
industry_maintenance_nn/: Backup Single Main.txt  Cargo.toml  model.json  model_trained.bincode  training_history.json
industry_maintenance_nn/Backup Industrial NN (No Bindcode)/: main rs.txt  neural nets.txt  trainer rs.txt
industry_maintenance_nn/csv/: industry_maintenance.csv
industry_maintenance_nn/src/: lib.rs  main.rs
industry_maintenance_nn/src/data/: dataset.rs  mod.rs  preprocessing.rs
industry_maintenance_nn/src/model/: activations.rs  mod.rs  neural_net.rs
industry_maintenance_nn/src/training/: mod.rs  trainer.rs
industry_maintenance_nn/src/utils/: metrics.rs
taylor_qt/: Cargo.toml
taylor_qt/gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
taylor_qt/src/: lib.rs  table.rs  taylor.rs
trig_comparison/: Cargo.toml
trig_comparison/src/: main.rs  table.rs  taylor.rs
