[package]
name = "qt_svm_knn"
version = "0.1.0"
edition = "2024"

[lib]
name = "qt_svm_knn"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.15"
linfa-logistic = "0.6"
rand = "0.8"
csv = "1.2"
plotters = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
linfa = "0.6"
