[package]
name = "industry_maintenance_nn"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
ndarray = { version = "0.16.1", features = ["serde"] }
ndarray-rand = "0.15.0"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0.140"
plotters = { version = "0.3.7", features = ["bitmap_backend", "bitmap_encoder"] }